--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0
+    margin: 0;
 }
 
 h1 {
@@ -13,6 +13,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 p {
@@ -21,7 +22,7 @@ p {
 
 .half-width {
     width: 50%;
-    padding-left: 2%;
+    padding-left: 5%;
     padding-right: 5%;
 }
 
@@ -42,4 +43,10 @@ p {
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
