--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h2 {
 
 .flexible-container {
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 p {
@@ -32,7 +32,7 @@ p {
 }
 
 .half-width img {
-    width: 100%;
+    width: 80%;
 
 }
 
@@ -57,14 +57,17 @@ p {
 }
 
 .experience-item {
-    width: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding-left: 10px;
-    border-radius: 10px;
     box-shadow: 10px 10px 40px gray;
-    height: 80%;
-    border: 7px solid
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 20px;
+    padding-right: 100px;
+    margin-right: 5%;
+    border-radius: 10px;
+    height: 20px;
+
+
 }
 
 .experience {
@@ -74,13 +77,17 @@ p {
 }
 
 #fullstack {
-    border-left: 7px solid orangered
+    border-left: 7px solid tomato;
 }
 
 #baby {
-    border-left: 7px solid blue;
+    border-left: 7px solid;
+    border-image: linear-gradient(blue 100%, cyan 100%);
+    border-image-slice: 1;
 }
+
 
 footer p {
     text-align: center;
+
 }
